--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,14 @@ body {
   min-height: 100vh;
 }
 
+#root,
+.app {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -74,15 +82,45 @@ pre {
   font-size: 3em;
 }
 
+.start {
+  font-size: 2em;
+  margin: 5em;
+}
+
+.logs {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  max-width: 800px;
+}
+
+.log-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 2px;
+  border-bottom: 1px solid hsl(0deg, 0%, 16%);
+  padding-bottom: 10px;
+}
+
 .log-row {
   display: flex;
-  width: 600px;
+  width: 100%;
   justify-content: space-between;
   gap: 1em;
 }
 
-.log-row > *:nth-child(1) {
-  white-space: nowrap;
+.log-row.summary {
+  opacity: 0.5;
+}
+
+.log-header {
+  text-align: left;
+  width: 100%;
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 10px;
 }
 
 .log-row > *:nth-child(1),
@@ -95,5 +133,6 @@ pre {
 }
 
 .log-row > *:nth-child(3) {
+  text-align: left;
   width: 100%;
 }
